Cleaned up part 08